--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Monitor de Baterías</title>
-  <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}?v=2" type="image/x-icon">
   <style>
     body {
       font-family: Arial, sans-serif;
