Corigiendo los iconos

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Monitor de Baterías</title>
-  <link rel="icon" href="{{ url_for('static', filename='Favicon_none.png') }}" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename='favicon_none.png') }}" type="image/x-icon">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -50,13 +50,13 @@
 
   <script>
     function actualizarFavicon(estado) {
-      let favicon = 'Favicon_full.png';
+      let favicon = 'favicon_full.png';
       if (estado === 'none') {
-        favicon = 'Favicon_none.png';
+        favicon = 'favicon_none.png';
       } else if (estado < 20) {
-        favicon = 'Favicon_low.png';
+        favicon = 'favicon_low.png';
       } else if (estado < 60) {
-        favicon = 'Favicon_medium.png';
+        favicon = 'favicon_medium.png';
       }
 
       const link = document.querySelector("link[rel~='icon']");
