--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
   <header>
         <div class="container">
             <div class="logo.conxia">
+                <div class="logo">
+                    <img src="static/conexxia-logo.png" alt="Ejemplo">
+                </div>
                 <div class="text">
                     <h1>Monitor de Baterrias Conexia</h1>
                 </div>
@@ -25,7 +28,10 @@
         </div>
         
     </header>
-    <div id="contenedor-baterias"></div>
+    <div class="bateria-container">
+        <div id="contenedor-baterias"></div>
+    </div>
+    
     <footer>
         <div class="container">
             <p>&copy; 2025 Conexia. Todos los derechos reservados</p>
