Agregando iconos en el footer y mejorandolo

--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -48,14 +48,14 @@
         </div>
     </main>
      <footer>
-        <div class="container">
+        <div class="container-3">
             <p>&copy; 2025 Conexia. Todos los derechos reservados</p>
-            <div class="redes">
-                <a href="#" aria-label="Facebook">F</a>
-                <a href="#" aria-label="Instagram">I</a>
-                <a href="#" aria-label="Youtube">Y</a>
             </div>
-        </div>
+        <div class="redes">
+            <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
+            <a href="#" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
+            <a href="#" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a> 
+            </div>
     </footer>
 </body>
 </html>
