--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -44,8 +44,8 @@
                     </div>
                 <h3>Síguenos</h3>
                 <div class="redes-2">
-                    <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo">
-                    <a href="#" aria-label="Instagram">I</a>
+                    <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
+                    <a href="#" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
                 </div>
                         
                     </div>
