añadiendo boton menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,14 @@
                     <h1>Monitor de Baterrias Conexia</h1>
                 </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="Ayuda.html" class="nav-link">Ayuda</a></li>
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a></li>
-                </ul>
-            </nav>
+                <div class="boton-container">
+                    <button onclick="toggleMenu()" class="boton">Más</button>
+                    <div id="miboton" class="contenido">
+                        <a href="Ayuda.html" class="nav-link">Ayuda</a>
+                        <a href="index.html" class="nav-link">Inicio</a>
+                        <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
+                    </div> 
+                </div>
         </div>
         
     </header>
