añadiendo boten de ventana emerjente

--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -9,8 +9,17 @@
 </head>
 <body>
     <header>
-        <div class="contaner">
-            <div class="logo.conxia">
+        <div class="container-header">  
+            <div class="boton-container">
+                <button onclick="toggleMenu()" class="boton">Más</button>
+                <div id="miboton" class="contenido">
+                    <a href="Ayuda.html" class="nav-link">Ayuda</a>
+                    <a href="index.html" class="nav-link">Inicio</a>
+                    <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
+                </div> 
+            </div>
+            
+            <div class="logo-conexia">
                 <div class="logo">
                     <img src="static/conexxia-logo.png" alt="Ejemplo">
                 </div>
@@ -18,13 +27,6 @@
                     <h1>Monitor de Baterrias Conexia</h1>
                 </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="Ayuda.html" class="nav-link">Ayuda</a></li>
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
     <main>
@@ -77,5 +79,6 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
