Reestilizado la página de ayuda

--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -33,12 +33,15 @@
         <div class="container2">
             <h2>Información del sitio web</h2>
             <div class="información">
-                <p>Esto es un Monitor de Baterrias en tiempo rea, que moestra lecturas de consumo,
-                    mostrando valores como el voltage y el porcetage de las baterrias, la página
-                    racciona de pendiendo del nivel de carga, junto al icono de la página, en la
-                    barra acomtinuación se explica las diferente reaciones con su significado:
+                <p>Esta página ha sido creada por la FUNDACIÓN IDENTIC para la empresa CONEXXIA,
+                    es un Monitor de Baterrias en tiempo real, que moestra lecturas de consumo y
+                    reacciones interacctivas de la página, reflejando valores como el voltage y
+                    el porcetage de las baterrias, la página junto al icon de la misma reaccionan 
+                    de pendiendo del nivel de carga, en la barra acomtinuación se citan las diferente 
+                    reaciones con su significado:
                 </p>
             <div class="barra">
+                <h3>Reacciones</h3>
                 <ul>
                     <li>1. Página en estado normal e icono verde: Significa que el promedio de carga de las baterrias es más del 60% </li>
                     <li>2. Página con un color narangizo e icono naranja: Significa que el promedio de carga de las baterriases menos del 60%</li>
