añadiendo el lazes en el footer

--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -57,9 +57,9 @@
             <p>&copy; 2025 Conexia. Todos los derechos reservados</p>
             </div>
         <div class="redes">
-            <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
-            <a href="#" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
-            <a href="#" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a> 
+            <a href="https://www.facebook.com/conexxiagq?__cft__[0]=AZWqzSOQiadoTHAifk1vwE_snN_VF-fAxbwf6V4LAkQmoAimgM08lbt9FEK-MYdi-sk0WJ4hQroGP34X59-b3lmdocLv8cGCuxo7FFE6SM_aNfJb7QwU_QGfIQMmkR4IuqZPNyJZCP4JIifnX5JpaclsZ_q5gkgk9F4SEhUDGyDLFLe-uE67_JdN5975FMnHuaQ&__tn__=-UC%2CP-R" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
+            <a href="https://www.instagram.com/conexxia?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
+            <a href="https://www.youtube.com/@conexxia3661" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a> 
             </div>
     </footer>
     <script src="script.js"></script>
