añadiendo link e la página de ayuda

--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -33,7 +33,8 @@
         <div class="container2">
             <h2>Información del sitio web</h2>
             <div class="información">
-                <p>Esta página ha sido creada por la FUNDACIÓN IDENTIC para la empresa CONEXXIA,
+                <p>Esta página ha sido creada por la <a href="https://www.identicge.org" aria-label="identicge.org">FUNDACIÓN IDENTIC</a> para la empresa
+                     <a href="https://www.conexxiaeg.com" aria-label="conexxiaeg.com">CONEXXIA</a>,
                     es un Monitor de Baterrias en tiempo real, que moestra lecturas de consumo y
                     reacciones interacctivas de la página, reflejando valores como el voltage y
                     el porcetage de las baterrias, la página junto al icon de la misma reaccionan 
