--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -48,6 +48,7 @@
                 <div class="redes-2">
                     <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
                     <a href="#" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
+                    <a href="#" aria-label="Instagram"><img src="static/whatsapp-logo.png" alt="Ejemplo"></a>
                 </div>
                         
                     </div>
