--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -13,6 +13,9 @@
             <div class="boton-container">
                 <button onclick="toggleMenu()" class="boton">Más</button>
                 <div id="miboton" class="contenido">
+                    <div class="fondo-conten">
+                        <a href="https://www.conexxiaeg.com" aria-label="conexxiaeg.com">conexxiaeg.com</a>
+                    </div>
                     <a href="Ayuda.html" class="nav-link">Ayuda</a>
                     <a href="index.html" class="nav-link">Inicio</a>
                     <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
