--- a/templates/Sugerencias.html
+++ b/templates/Sugerencias.html
@@ -13,6 +13,9 @@
             <div class="boton-container">
                 <button onclick="toggleMenu()" class="boton">Más</button>
                 <div id="miboton" class="contenido">
+                    <div class="fondo-conten">
+                        <a href="https://www.conexxiaeg.com" aria-label="conexxiaeg.com">conexxiaeg.com</a>
+                    </div>
                     <a href="Ayuda.html" class="nav-link">Ayuda</a>
                     <a href="index.html" class="nav-link">Inicio</a>
                     <a href="Sugerencias.html" class="nav-link">Sugerencias de Mejora</a>
@@ -44,11 +47,14 @@
                             <p>+240 222 458 194</p>
                         </div>
                     </div>
+                <h3>Imail:</h3>
+                <p>info@identicge.org</p>
                 <h3>Síguenos</h3>
                 <div class="redes-2">
-                    <a href="#" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
-                    <a href="#" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
-                    <a href="#" aria-label="Instagram"><img src="static/whatsapp-logo.png" alt="Ejemplo"></a>
+                    <a href="https://www.facebook.com/identicge?__cft__[0]=AZXmvpmpwyG4fJc7JTnxreaTQfzu2x1r8mOEWLV4gKicDgZEn5KON7pAYOwR3zgheeD6wTVM6td5tMcsudxrfhL3f9wJabUVtv2_joDG7LJwyC2pujO8vzoK1PDOf8u9t2asZ6QpFMm6QSdweXXqWepJk_nfOuvZnTcYMGtENvT07VbZB7MxxmzQXMeuHq8FV2A&__tn__=-UC%2CP-R" aria-label="Facebook"><img src="static/Facebook-logo-.png" alt="Ejemplo"></a>
+                    <a href="https://www.instagram.com/identic_fundacion?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" aria-label="Instagram"><img src="static/instagram-logo.png" alt="Ejemplo"></a>
+                    <a href="#" aria-label="Whatsapp"><img src="static/whatsapp-logo.png" alt="Ejemplo"></a>
+                    <a href="https://www.youtube.com/@identicfundacion" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a>
                 </div>
                         
                     </div>
