--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,10 @@
                 <button onclick="toggleMenu()" class="boton">Más</button>
                 <div id="miboton" class="contenido">
                     <div class="fondo-conten">
-                        <a href="https://www.conexxiaeg.com" aria-label="conexxiaeg.com">conexxiaeg.com</a>
+                        <div class="email">
+                            <p>comercial.malabo@conexxiaeg.com</p>
+                        </div>
+                        <img src="static/images (1).jpeg" alt="Fondo" class="imagen">
                     </div>
                     <a href="Ayuda.html" class="nav-link">Ayuda</a>
                     <a href="index.html" class="nav-link">Inicio</a>
