--- a/templates/style.css
+++ b/templates/style.css
@@ -90,21 +90,22 @@ header {
 .fondo-conten {
     width: 100%;
     height: 150px;
-    background-color: black;
     display: flex;
     display: block;
     text-align: center;
 }
 
-.fondo-conten a{
-    color: white;
-    font-size: 12px;
-    font-style: oblique;
-    text-decoration: none;
+.imagen {
+    width: 100%;
+    height: 132px;
+    opacity: 50%;
+    object-fit: cover;
 }
 
-.fondo-conten a:hover{
-    color: blue;
+.email{
+    font-size: 12px;
+    font-weight: 600;
+    color: #cacaca;
 }
 
 .show {
