--- a/templates/Ayuda.html
+++ b/templates/Ayuda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitor de Baterías</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon_none.png') }}" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <header>
@@ -69,6 +69,6 @@
             <a href="https://www.youtube.com/@conexxia3661" aria-label="Youtube"><img src="static/youtube-logo.png" alt="Ejemplo"></a> 
             </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
