acondicionando el index al flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                         <div class="email">
                             <p>comercial.malabo@conexxiaeg.com</p>
                         </div>
-                        <img src="static/images (1).jpeg" alt="Fondo" class="imagen">
+                        <img src="{{ url_for('static', filename='images/images(1).jpeg') }}" alt="logo">
                     </div>
                     <a href="Ayuda.html" class="nav-link">Ayuda</a>
                     <a href="index.html" class="nav-link">Inicio</a>
